--- a/style.css
+++ b/style.css
@@ -89,6 +89,61 @@ svg {
   color: black;
 }
 
+
+@media (min-width: 0px) and (max-width: 600px) {
+  .inmid {
+    background-color: black;
+  }
+  .industrial {
+   background-color: #000000;
+  }
+  .industrial h5 {
+    color: white;
+  }
+  .industrial:hover {
+    animation-name: ravis3;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+  }
+  .realEstate {
+   background-color: #000000;
+  }
+  .realEstate h5 {
+    color: white;
+  }
+  .realEstate:hover {
+    animation-name: ravis3;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+  }
+  .museum {
+   background-color: #000000;
+  }
+  .museum h5 {
+    color: white;
+  }
+  .museum:hover {
+    animation-name: ravis3;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+  }
+  .gastronomy {
+   background-color: #000000;
+  }
+  .gastronomy h5 {
+    color: white;
+  }
+  .gastronomy:hover {
+    animation-name: ravis3;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+  }
+  
+}
 .industrial:hover{
   animation-name: ravis3;
   animation-duration: 1s;
@@ -140,7 +195,10 @@ svg {
   }
   
 }
-.gastronomy:hover {
+.infoot h2:current {
+  background-color: red;
+}
+.gastronomy:focus {
   animation-name: ravi;
   animation-duration: 1s;
   animation-iteration-count: 1;
