--- a/style.css
+++ b/style.css
@@ -71,7 +71,10 @@ svg {
 .inmids {
   text-align: center;
   padding: 10px 20px;
+  margin: 2rem;
+  
 }
+
 .industrial {
   background-color: white;
   color: rgb(0, 0, 0);
@@ -91,6 +94,7 @@ svg {
 
 
 @media (min-width: 0px) and (max-width: 800px) {
+  
   .inmid {
     background-color:white;
   }
@@ -109,6 +113,9 @@ svg {
     animation-duration: 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+  }
+  .inmids:hover{
+    box-shadow: 10px 10px 20px 1px rgb(0, 0, 0);
   }
   .realEstate {
    background-color: white;
@@ -173,7 +180,7 @@ svg {
     background-color: white;
   }
   to{
-    border-radius: 100px;
+    border-radius: 70px;
     background-color: rgb(255, 0, 0);
   }
   
@@ -190,7 +197,7 @@ svg {
     background-color: white;
   }
   to{
-    border-radius: 100px;
+    border-radius: 70px;
     background-color: rgb(9, 255, 0);
   }
   
@@ -207,8 +214,9 @@ svg {
     background-color: white;
   }
   to{
-    border-radius: 100px;
+    border-radius: 70px;
     background-color: rgb(0, 81, 255);
+    box-shadow:4px 4px 4px #000000;
   }
   
 }
@@ -227,7 +235,7 @@ svg {
     background-color: white;
   }
   to{
-    border-radius: 100px;
+    border-radius: 70px;
     background-color: rgb(255, 251, 0);
   }
   
