mobile menu added

--- a/style.css
+++ b/style.css
@@ -91,7 +91,11 @@ svg {
   background-color:white;
   color: black;
 }
-
+@media (min-width:800px) {
+  .topnav {
+    display: none;
+  }
+}
 
 @media (min-width: 0px) and (max-width: 800px) {
   .navBar {
