--- a/style.css
+++ b/style.css
@@ -102,7 +102,17 @@ svg {
     display: none;
   }
   .inmid {
-    background-color:white;
+    background-position: center;
+    background-image: url('3d2.jpg');
+    background-attachment: fixed;
+  }
+  .inmids {
+    opacity: 0.5;
+    border-radius: 50%;
+  }
+ 
+  .inmids:hover {
+    opacity: 1;
   }
   .industrial {
    background-color: white;
@@ -242,7 +252,7 @@ svg {
   }
   to{
     border-radius: 70px;
-    background-color: rgb(255, 251, 0);
+    background-color: rgb(189, 186, 0);
   }
   
 }
