--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@ h3 {
 .navBar a:hover {
   color: #00c206;
 }
+#lang-btn {
+  display: inline-block;
+}
+#lang-switch {
+  background-color: black;
+  color: white;
+  border-radius: 20px;
+  outline:0px;
+}
 .ourWorkContainer {
   color: rgb(0, 0, 0);
   text-align: center;
@@ -75,6 +84,7 @@ svg {
   max-width: 100%;
   max-height: 100%;
   width: 100%;
+  background-color: #555555;
   display: flex;
   font-family: "Baloo 2", cursive;
   text-align: center;
@@ -85,7 +95,8 @@ svg {
   background-color: rgb(255, 255, 255);
   width: 100%;
   border: solid rgb(255, 255, 255) 4px;
-  margin: auto;
+  margin: 2% 20% 2% 20%;
+ border-radius: 30px;
 }
 .infoot h2 {
   color: green;
@@ -105,95 +116,7 @@ footer input {
   border: solid blue 2px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  /* Position the image container (needed to position the left and right arrows) */
-.mySlides {
-  width: 100%;
-  height: 80%;
-  align-items: center;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Add a pointer when hovering over the thumbnail images */
-.cursor {
-  cursor: pointer;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  /* position: absolute; */
-  top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-
-  padding: 8px 12px;
-  /* position: absolute; */
-  top: 0;
-}
-
-/* Container for image text */
-.caption-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Six columns side by side */
-.column {
-  float: left;
-  width: 16.66%;
-}
+/* FOR SLIDERS */
 
 /* Add a transparency effect for thumnbail images */
 .demo {
@@ -295,110 +218,58 @@ form {
 }
 
 .fa-facebook {
-  background: #3b5998;
-  color: white;
+  background: #272727;
+  color: rgb(255, 255, 255);
 }
 
 .fa-twitter {
-  background: #55acee;
-  color: white;
+  background: #272727;
+  color: rgb(255, 255, 255);
 }
 
 .fa-google {
-  background: #dd4b39;
-  color: white;
+  background: #272727;
+  color: rgb(255, 255, 255);
 }
 
 .fa-linkedin {
-  background: #007bb5;
-  color: white;
+  background: #272727;
+  color: rgb(255, 255, 255);
 }
 
 .fa-youtube {
-  background: #bb0000;
-  color: white;
+  background: #272727;
+  color: rgb(255, 255, 255);
 }
 
 .fa-instagram {
-  background: #125688;
-  color: white;
+  background: #272727;
+  color: rgb(255, 255, 255);
 }
 
-.fa-pinterest {
-  background: #cb2027;
-  color: white;
-}
-
-.fa-snapchat-ghost {
-  background: #fffc00;
-  color: white;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-}
 
 .fa-skype {
-  background: #00aff0;
-  color: white;
+  background: #272727;
+  color: rgb(255, 255, 255);
 }
 
-.fa-android {
-  background: #a4c639;
-  color: white;
-}
-
-.fa-dribbble {
-  background: #ea4c89;
-  color: white;
-}
-
-.fa-vimeo {
-  background: #45bbff;
-  color: white;
-}
-
-.fa-tumblr {
-  background: #2c4762;
-  color: white;
-}
-
-.fa-vine {
-  background: #00b489;
-  color: white;
-}
-
-.fa-foursquare {
-  background: #45bbff;
-  color: white;
-}
-
-.fa-stumbleupon {
-  background: #eb4924;
-  color: white;
-}
 
 .fa-flickr {
-  background: #f40083;
-  color: white;
+  background: #272727;
+  color: rgb(255, 255, 255);
 }
 
 .fa-yahoo {
-  background: #430297;
-  color: white;
+  background: #272727;
+  color: rgb(255, 255, 255);
 }
 
-.fa-soundcloud {
-  background: #ff5500;
-  color: white;
-}
 
 .fa-reddit {
-  background: #ff5700;
-  color: white;
+  background: #272727;
+  color: rgb(255, 255, 255);
 }
 
-.fa-rss {
-  background: #ff6600;
-  color: white;
-}
 
 
 
