--- a/slider.css
+++ b/slider.css
@@ -6,6 +6,9 @@
     /* margin: 0px 0px 0px 0px; */
   }
   
+  .centered .inmids {
+    background:none;
+  }
   /* Bottom left text */
   .bottom-left {
     position: absolute;
@@ -56,5 +59,5 @@
 
 
   .containerz img {
-height: 800px;
+height: 30em;
   }
