--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
   font-family: "Baloo 2", cursive;
   font-size: 3vh;
 }
+.container {
+  margin: 0;
+  padding: 0;
+  width: auto;
+
+}
 h3 {
   color: green;
 }
@@ -19,9 +25,18 @@ h3 {
   text-align: center;
   padding-bottom: 10px;
   margin-top: 8px;
+  position: fixed;
+  overflow: hidden;
+  z-index: 1;
+  width: 100%;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.codrops-header {
+  margin-top: 3em;
 }
 .navBar a:hover {
-  color: #00c206;
+  color: #808080;
 }
 #lang-btn {
   display: inline-block;
@@ -31,6 +46,9 @@ h3 {
   color: white;
   border-radius: 20px;
   outline:0px;
+}
+.content .inmids {
+  background-color: none;
 }
 .ourWorkContainer {
   color: rgb(0, 0, 0);
@@ -56,26 +74,42 @@ a{
 
 
 
-.inmid {
-  height: 100%;
+.in-inmid {
+  background-color: #ffffff;
 display: grid;
-  margin-top: 10px;  
+grid-template-columns: 1fr 1fr 1fr 1fr;
+justify-content: center;
+align-items: center;
+height: 500px;
+}
+.in-inmids {
+
+  text-align: center;
+  background-color: rgb(0, 0, 0);
+  color: rgb(116, 116, 116);
+  /* width: 80%; */
+  height: 20em;
+  /* margin: 0px 0px 10px 90px; */
+  /* border-radius: 20px; */
+  box-shadow: 12px 12px 20px 20px rgba(0, 0, 255, .2);
+}
+
+.in-inmid .industrial, .museum {
+  background-color: #757575;
+  color: white;
+  padding: 10px;
+}
+.in-inmid .gastronomy, .realEstate {
+  background-color: #000000;
+  color: white;
+  padding: 10px;
 }
 svg {
   width: 8vw;
   height: 8vh;
   color: green;
 }
-.inmids {
-  height: 30rem;
-  text-align: center;
-  padding: 10%;
-  margin: 5%;
-  border-radius: 30px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-}
-.inmids h5  , .inmids a{
+.in-inmids h5  , .in-inmids a{
   color: green;
 }
 
