--- a/style.css
+++ b/style.css
@@ -4,33 +4,33 @@ body {
   margin: 0;
   padding: 0;
 }
+.navBar img {
+  width: 50px;
+}
 .containerMain {
   background-color: white;
-  display: grid;
-  margin: -1px 2px -32px 0px;
+  /* display: grid; */
+ width: 100%;
   font-family: "Baloo 2", cursive;
   font-size: 3vh;
 }
 .container {
   margin: 0;
   padding: 0;
-  width: auto;
-
+  width: 100%;
+position: relative;
 }
 h3 {
   color: green;
 }
 .navBar {
-  background-color: white;
-  text-align: center;
-  padding-bottom: 10px;
-  margin-top: 8px;
-  position: fixed;
   overflow: hidden;
-  z-index: 1;
+  background-color: rgb(255, 255, 255);
+  position: fixed;
+  top: 0;
+  padding-bottom: 3px;
   width: 100%;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  z-index: 1;
 }
 .codrops-header {
   margin-top: 3em;
@@ -47,16 +47,14 @@ h3 {
   border-radius: 20px;
   outline:0px;
 }
-.content .inmids {
-  background-color: none;
-}
+
 .ourWorkContainer {
   color: rgb(0, 0, 0);
   text-align: center;
   background-color: white;
 }
-span{
-  margin: 0px 40px 0px 20px;
+.navBar span{
+  padding: 0px 40px 0px 20px;
 }
 a{
   text-decoration: none;
@@ -68,48 +66,46 @@ a{
 .img {
   margin: 4px 10px -10px 0px;
 }
+
 .row {
   margin-top: -10px;
 }
 
+.cache img {
+  width: 100%;
+}
 
 
 .in-inmid {
   background-color: #ffffff;
-display: grid;
-grid-template-columns: 1fr 1fr 1fr 1fr;
+display: flex;
+flex-direction: row;
+/* flex-wrap: wrap; */
 justify-content: center;
 align-items: center;
-height: 500px;
 }
 .in-inmids {
-
   text-align: center;
   background-color: rgb(0, 0, 0);
   color: rgb(116, 116, 116);
-  /* width: 80%; */
   height: 20em;
-  /* margin: 0px 0px 10px 90px; */
-  /* border-radius: 20px; */
-  box-shadow: 12px 12px 20px 20px rgba(0, 0, 255, .2);
+  width: 100%;
 }
 
 .in-inmid .industrial, .museum {
   background-color: #757575;
   color: white;
-  padding: 10px;
 }
 .in-inmid .gastronomy, .realEstate {
   background-color: #000000;
   color: white;
-  padding: 10px;
 }
 svg {
   width: 8vw;
   height: 8vh;
   color: green;
 }
-.in-inmids h5  , .in-inmids a{
+.in-inmids h5 ,.in-inmids a{
   color: green;
 }
 
@@ -126,9 +122,10 @@ svg {
 
 .infoot {
   background-color: rgb(255, 255, 255);
-  width: 100%;
+  width: 50%;
+  margin: auto;
   border: solid rgb(255, 255, 255) 4px;
-  margin: 2% 20% 2% 20%;
+  
  border-radius: 30px;
 }
 .infoot h2 {
@@ -150,6 +147,9 @@ footer input {
 }
 
 /* FOR SLIDERS */
+
+
+
 
 /* Add a transparency effect for thumnbail images */
 .demo {
@@ -219,7 +219,7 @@ input[type="submit"]:hover {
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .col-25,
   .col-75,
   input[type="submit"] {
@@ -339,10 +339,6 @@ form {
 
 .topnav a.icon {
   float: right;
-}
-.topnav .img {
-  margin: 20px 150px 0px 0px;
-  width: 50px;
 }
 
 .topnav a:hover {
